<resources>
    <string name="app_name">TikTalk</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Reset Password</string>
    <string name="action_register_short">Register</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="hint_already_user">Already a user?</string>
    <string name="hint_nickname">Nickname</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="check_remember">Remember Me</string>
    <string name="connection">Connection</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="weather">Weather</string>
    <string name="shared_pref_jwt" />
    <string name="nickname">Nickname</string>
    <string name="full_name">Full name</string>
    <string name="type_a_message">Type a message</string>
    <string name="town">Town</string>
    <string name="city">City</string>
    <string name="localdatetime">LocalDateTime</string>

    <string name="base_url_service">https://tcss450-2022au-group3.herokuapp.com/</string>
    <string name="base_url_auth">https://tcss450-2022au-group3.herokuapp.com/</string>

    <string name="base_url">https://tcss450-2022au-group3.herokuapp.com/</string>
    <string name="back_to_signin">Sign In</string>
    <string name="action_link" />
    <string name="hint_reset_code">Reset Code</string>
    <string name="verify_code">Verify</string>
    <string name="reset_password">Reset</string>
    <string name="hint_sent_request">Sent Request</string>
    <string name="hint_received_request">Pending Request</string>
    <string name="hint_search">Enter Email</string>
    <string name="hint_contacts">Contacts</string>

    <string name="switch_sign_in">Stay Signed in</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="change_theme">Change Theme</string>
    <string name="change_password">Change Password</string>
    <string name="send">Send</string>
    <string name="chatroom_name">Chatroom Name</string>
    <string name="hint_chatroom_name">Enter chatroom name</string>

</resources>