<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_inner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/text_title"
        app:layout_constraintTop_toTopOf="@+id/text_title">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="66dp"
            android:layout_height="66dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_contact_person_black_24dp" />

        <TextView
            android:id="@+id/text_full_name"
            android:layout_width="108dp"
            android:layout_height="22dp"
            android:text="@string/full_name"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/button_contact_remove"
            android:layout_width="66dp"
            android:layout_height="66dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_contact_remove_24dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageButton
            android:id="@+id/button_contact_message"
            android:layout_width="66dp"
            android:layout_height="66dp"
            app:layout_constraintEnd_toStartOf="@+id/button_contact_remove"
            app:srcCompat="@drawable/chat"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/text_nickname"
            android:layout_width="171dp"
            android:layout_height="22dp"
            android:text="@string/hint_nickname"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_email" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="171dp"
            android:layout_height="19dp"
            android:text="@string/hint_email"
            app:layout_constraintStart_toEndOf="@+id/image_profile"
            app:layout_constraintTop_toBottomOf="@+id/text_full_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>