<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_sent_request"
        android:name="edu.uw.tcss450.team3.tiktalk.ui.connection.ConnnectionFragment"
        android:layout_width="372dp"
        android:layout_height="274dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sent_request"
        tools:context="edu.uw.tcss450.team3.tiktalk.ui.connection.ConnnectionFragment"
        tools:listitem="@layout/fragment_contact_card">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_received_request"
        android:name="edu.uw.tcss450.team3.tiktalk.ui.connection.ConnnectionFragment"
        android:layout_width="372dp"
        android:layout_height="274dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_received_request"
        tools:context="edu.uw.tcss450.team3.tiktalk.ui.connection.ConnnectionFragment"
        tools:listitem="@layout/fragment_contact_card">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/button_send_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="19dp"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_received_request"
        android:layout_width="372dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hint_received_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_search" />

    <TextView
        android:id="@+id/text_search"
        android:layout_width="276dp"
        android:layout_height="46dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:text="@string/hint_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_sent_request"
        android:layout_width="372dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/hint_sent_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_received_request" />

</androidx.constraintlayout.widget.ConstraintLayout>